# mai

./: .gitignore  README.md  setup_mai.sh
.github/workflows/: mai-utils-cd.yml
apps/bluesky-poster/: .env.example  README.md  requirements.txt
apps/bluesky-poster/src/: MANIFEST.in  main.py  setup.cfg
apps/bluesky-poster/src/bluesky_poster/: deepseek_client.py  default_settings.yaml  local_inference_client.py  logger.py  main.py  news_client.py  openai_client.py  setup_config.py
apps/bluesky-poster/src/bluesky_poster/auth/: authenticate.py
apps/bluesky-poster/src/bluesky_poster/config/: __init__.py
apps/bluesky-poster/src/bluesky_poster/post/: poster.py
apps/bluesky-poster/src/bluesky_poster/trends/: trending_hashtags.py
huggingface/: README.md
mai/utils/: logger.py  requirements.txt  setup.py
models/: README.md
scripts/: configure_environment.sh  constants.sh  display_mai_info.sh  gather_python_files.sh  install_cuda.sh  install_firecrawl.sh  install_llama_cpp.sh  install_llama_cpp_python.sh  install_utilities.sh  logs.sh
src/: hello_llama.py
src/examples/: hello_llama.py
src/experiments/: benchmark_llama.py  chat_with_llama.py  chat_with_mlx.py  chat_with_transformers.py
src/experiments/huggingface/: benchmark_transformer.py
src/mai/: requirements.txt
src/mai/assistant_api/: README.md
src/mai/copilot_api/: README.md  main.py
src/mai/crosscutting/: logging.py
src/mai/generators/: code_llama_generator.py  gpt2_generator.py  santa_coder_generator.py  (+1 more)
src/mai_vs_copilot/: CHANGELOG.md  README.md  package-lock.json  package.json
(+5 files in other folders)
