[metadata]
name = bluesky-poster
version = 0.1.0
author = Juan G Carmona
author_email = juan@jgcarmona.com
license = MIT
description = Bluesky social media post generator
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yourusername/bluesky-poster
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License

[options]
package_dir = = src
packages = find:
python_requires = >=3.8
install_requires =
    atproto
    python-dotenv
    questionary
    requests
    openai

[options.entry_points]
console_scripts =
    bluesky-poster = bluesky_poster.main:main